src/objects/Travel_Leg_MERC__c.object
<CustomObject>
    <description>Details of travel arrangements child of Travel
Created by John A Adams 10/9/2013</description>
    <fields>
        <fullName>Carrier_MERC__c</fullName>
        <description>Transportation carrier
Created by John A Adams 10/10/2013</description>
        <label>Carrier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_MERC__c</fullName>
        <description>Transportation details
Created by John A Adams 10/10/2013</description>
        <label>Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_and_Time_MERC__c</fullName>
        <description>End date and time for travel leg
Created by John A Adams 10/10/2013</description>
        <label>End Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flight_MERC__c</fullName>
        <description>Flight Number for air transportation
Created by John A Adams 10/10/2013</description>
        <label>Flight</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_MERC__c</fullName>
        <description>Transportation leg departing from
Created by John A Adams 10/10/2013</description>
        <label>From</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_and_Time_MERC__c</fullName>
        <description>Date and time start of travel leg
Created by John A Adams 10/10/2013</description>
        <label>Start Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>To_MERC__c</fullName>
        <description>Transportion leg arriving at:
Created by John A Adams 10/10/2013</description>
        <label>To</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_MERC__c</fullName>
        <description>Details of Travel object
Created by John A Adams 10/10/2013</description>
        <label>Travel</label>
        <referenceTo>Travel_MERC__c</referenceTo>
        <relationshipLabel>Travel Legs</relationshipLabel>
        <relationshipName>Travel_Legs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Travel Leg</label>
    <nameField>
        <displayFormat>Leg-{000000}</displayFormat>
        <label>Leg Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Legs</pluralLabel>
    <recordTypes>
        <fullName>Air_ENVT_MVN</fullName>
        <active>true</active>
        <description>Air transportation details</description>
        <label>Air</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ground_EVNT_MVN</fullName>
        <active>true</active>
        <description>Ground transportation details</description>
        <label>Ground</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>